# OpenAi_Agent_SDK

./: MarkDown.md  api.py  app.py  chainlit.py  main.py  model_setting.py  orchestrator.py  prompt_engineering_agent.py  pyproject.toml  test.py
Agent/: cloning.py  dynamic_instruction.py  model_configuration.py  model_setting.py  structure_output.py
Context/: context.py  context_1.py  session.py
Guardrils/: both_guardrails.py  input_guardrails.py  output_guardrails.py
Handoffs/: Customize_handoffs.py  handoffs.py  handoffs_input.py
Runner/: custom_runner.py  runner.py
Streaming/: run_stream.py  streaming.py
Tools/: as_tool.py  class4_tool.py  custom_output_extractor.py  tool.py  validate_tool.py
Tracing/: custom_tracing.py  openai_tracing.py  tracing.py
lifecycle_hooks/: life_cycle_Agent_hooks.py  life_cycle_Run_hooks.py
model_level/: agent_level.py  global_level.py  run_level.py
